@@ -6,7 +6,15 @@ List of significant changes to Test::WriteVariants
 
 =cut
 
-=head2 Changes in Test::WriteVariants 0.001 - 15th March 2014
+=head2 Test::WriteVariants 0.003 - 16th March 2014
+
+  Treat undef for env var as meaning 'ensure not in %ENV'.
+
+=head2 Test::WriteVariants 0.002 - 16th March 2014
+
+  Add control of test_prefix plus assorted fixes.
+
+=head2 Test::WriteVariants 0.001 - 15th March 2014
 
   Initial release based on prototype in https://github.com/perl5-dbi/DBI-Test
 
